# OpenGrid

./: .gitignore  DEPLOY.md  LICENSE  OpenGrid.md  README.md  pyproject.toml  quickstart.sh  worker_loop.py
docker/: .env.example  Dockerfile.cpu  Dockerfile.gpu  Dockerfile.orchestrator  docker-compose.yml
src/opengrid/: __init__.py  __main__.py
src/opengrid/api/: server.py
src/opengrid/api/middleware/: auth.py  credit_check.py
src/opengrid/api/routes/: completions.py  credits.py  models.py  work_poll.py
src/opengrid/coordinator/: admission.py  dag_executor.py  executor.py  kv_router.py  reputation.py  scheduler.py
src/opengrid/daemon/: benchmark.py  config.py  credit_ledger.py  resource_guard.py  shard_manager.py
src/opengrid/memory/: local_store.py
src/opengrid/mesh/: bootstrap.py  crypto.py  dht.py  e2e.py  gossip.py  peer_registry.py
src/opengrid/node/: inference_engine.py  kv_cache.py  pipeline.py  server.py  sharded_backend.py  toploc_prover.py  worker.py
src/opengrid/orchestrator/: local_model.py  tools.py  work_monitor.py
src/opengrid/registry/: model_registry.py
src/opengrid/registry/manifests/: bitnet-b158-2b.json  llama3-8b-int4.json
tests/integration/: test_sharded.py  test_transport.py
tests/unit/: test_crypto.py  test_dag.py  test_e2e.py  test_kv_cache.py  test_ledger.py  test_work_monitor.py
